[package]
name = "sandbox-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sandboxd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
