[package]
name = "sandbox-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sandboxd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
